--- a/package.json
+++ b/package.json
@@ -8,13 +8,29 @@
     "dev:server": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts"
   },
   "dependencies": {
+    "aws-sdk": "^2.799.0",
+    "celebrate": "^13.0.4",
+    "class-transformer": "^0.3.1",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
+    "ioredis": "^4.19.2",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.2",
+    "rate-limiter-flexible": "^2.1.13",
+    "redis": "^3.0.2",
+    "reflect-metadata": "^0.1.13",
+    "tsyringe": "^4.4.0",
     "typeorm": "^0.2.29"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.8",
     "@types/express": "^4.17.9",
+    "@types/ioredis": "^4.17.8",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/multer": "^1.4.4",
+    "@types/redis": "^2.8.28",
     "@typescript-eslint/eslint-plugin": "^4.8.2",
     "@typescript-eslint/parser": "^4.8.2",
     "eslint": "6.8.0",
