--- a/package.json
+++ b/package.json
@@ -1,47 +1,74 @@
 {
-  "name": "backend",
+  "name": "bossabox",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT",
+  "license": "UNLICENSED",
   "scripts": {
-    "build": "tsc",
-    "dev:server": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts"
+    "dev:server": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/shared/infra/http/server.ts",
+    "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files",
+    "start": "ts-node src/shared/infra/http/server.ts",
+    "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
+    "test": "jest"
   },
   "dependencies": {
-    "aws-sdk": "^2.799.0",
-    "celebrate": "^13.0.4",
+    "aws-sdk": "^2.695.0",
+    "bcryptjs": "^2.4.3",
+    "celebrate": "^12.1.1",
     "class-transformer": "^0.3.1",
     "cors": "^2.8.5",
+    "date-fns": "^2.0.0-beta.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
-    "ioredis": "^4.19.2",
+    "handlebars": "^4.7.6",
+    "ioredis": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
+    "mime": "^2.4.6",
+    "mongodb": "^3.5.8",
     "multer": "^1.4.2",
-    "rate-limiter-flexible": "^2.1.13",
+    "nodemailer": "^6.4.8",
+    "pg": "^8.0.2",
+    "rate-limiter-flexible": "^2.1.7",
     "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
-    "tsyringe": "^4.4.0",
-    "typeorm": "^0.2.29"
+    "tsyringe": "^4.3.0",
+    "typeorm": "^0.2.24",
+    "uuidv4": "^6.0.7"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.8",
-    "@types/express": "^4.17.9",
-    "@types/ioredis": "^4.17.8",
-    "@types/jsonwebtoken": "^8.5.0",
-    "@types/multer": "^1.4.4",
-    "@types/redis": "^2.8.28",
-    "@typescript-eslint/eslint-plugin": "^4.8.2",
-    "@typescript-eslint/parser": "^4.8.2",
-    "eslint": "6.8.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-import-resolver-typescript": "^2.3.0",
-    "eslint-plugin-import": "^2.21.2",
-    "eslint-plugin-prettier": "^3.1.4",
-    "prettier": "^2.2.0",
-    "ts-node-dev": "^1.0.0",
+    "@babel/cli": "^7.10.3",
+    "@babel/node": "^7.10.3",
+    "@babel/plugin-proposal-class-properties": "^7.10.1",
+    "@babel/plugin-proposal-decorators": "^7.10.3",
+    "@babel/preset-env": "^7.10.3",
+    "@babel/preset-typescript": "^7.10.1",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.6",
+    "@types/express": "^4.17.6",
+    "@types/hapi__joi": "^17.1.2",
+    "@types/ioredis": "^4.16.5",
+    "@types/jest": "^25.2.3",
+    "@types/jsonwebtoken": "^8.3.9",
+    "@types/mongodb": "^3.5.20",
+    "@types/multer": "^1.4.3",
+    "@types/nodemailer": "^6.4.0",
+    "@types/redis": "^2.8.22",
+    "@typescript-eslint/eslint-plugin": "^3.0.1",
+    "@typescript-eslint/parser": "^3.0.1",
+    "babel-plugin-module-resolver": "^4.0.0",
+    "babel-plugin-transform-typescript-metadata": "^0.3.0",
+    "eslint": "^7.1.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-import-resolver-typescript": "^2.0.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-import-helpers": "^1.0.2",
+    "eslint-plugin-prettier": "^3.1.3",
+    "jest": "^26.0.1",
+    "prettier": "^2.0.5",
+    "ts-jest": "^26.0.0",
+    "ts-node-dev": "^1.0.0-pre.44",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.1.2"
+    "typescript": "^3.8.3"
   }
 }
