--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.3.0",
     "typeorm": "^0.2.24",
+    "uuid": "^8.3.1",
     "uuidv4": "^6.0.7"
   },
   "devDependencies": {
