--- a/ormconfig.exemple.json
+++ b/ormconfig.exemple.json
@@ -5,8 +5,8 @@
     "host": "localhost",
     "port": 5432,
     "username": "postgres",
-    "password": "docker",
-    "database": "bossabox",
+    "password": "secret",
+    "database": "name_db",
     "entities": ["./src/modules/**/infra/typeorm/entities/*.ts"],
     "migrations": ["./src/shared/infra/typeorm/migrations/*.ts"],
     "cli": {
@@ -18,7 +18,7 @@
     "type": "mongodb",
     "host": "localhost",
     "port": 27017,
-    "database": "bossabox",
+    "database": "name_db",
     "useUnifiedTopology": true,
     "entities": ["./src/modules/**/infra/typeorm/schemas/*.ts"]
   }
