--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "test",
+  "name": "template",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "UNLICENSED",
+  "license": "MIT",
   "scripts": {
     "dev:server": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/shared/infra/http/server.ts",
     "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files",
@@ -11,9 +11,9 @@
     "test": "jest"
   },
   "dependencies": {
-    "aws-sdk": "^2.695.0",
+    "aws-sdk": "^2.1098.0",
     "bcryptjs": "^2.4.3",
-    "celebrate": "^12.1.1",
+    "celebrate": "^15.0.1",
     "class-transformer": "^0.3.1",
     "cors": "^2.8.5",
     "date-fns": "^2.0.0-beta.5",
@@ -34,18 +34,16 @@
     "swagger-ui-express": "^4.1.5",
     "tsyringe": "^4.3.0",
     "typeorm": "^0.2.24",
-    "uuid": "^8.3.1",
     "uuidv4": "^6.0.7"
   },
   "devDependencies": {
-    "@babel/cli": "^7.17.6",
-    "@babel/core": "^7.17.8",
-    "@babel/node": "^7.16.8",
-    "@babel/plugin-proposal-class-properties": "^7.16.7",
-    "@babel/plugin-proposal-decorators": "^7.17.8",
-    "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
-    "@babel/preset-env": "^7.16.11",
-    "@babel/preset-typescript": "^7.16.7",
+    "@babel/cli": "^7.14.8",
+    "@babel/core": "^7.15.0",
+    "@babel/node": "^7.14.9",
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/plugin-proposal-decorators": "^7.14.5",
+    "@babel/preset-env": "^7.15.0",
+    "@babel/preset-typescript": "^7.15.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
